@@ -1206,6 +1206,7 @@ my @stations = (
 	[ 'BBST',  'Bestensee' ],
 	[ 'EBWG',  'Bestwig' ],
 	[ 'DNOB',  'Betonwerk Oeton' ],
+	[ 'FKBH1', 'Betrh Sandh Str' ],
 	[ 'XLXBB', 'Bettembg Gr FR' ],
 	[ 'XLB',   'Bettembourg' ],
 	[ 'NBMS',  'Bettmannsäge' ],
@@ -2641,16 +2642,16 @@ my @stations = (
 	[ 'XPCWA', 'Czerwonka' ],
 	[ 'XPCS',  'Czestoch Stradom' ],
 	[ 'XPC',   'Czestochowa Osob' ],
-	[ 'KDA D', 'Abstellbf' ],
+	[ 'KDA',   'D Abstellbf' ],
 	[ 'KDFF',  'D Flughafen' ],
 	[ 'KDFFH', 'D Flughafen Hp' ],
-	[ 'KDF D', 'Flughafen Term' ],
+	[ 'KDF',   'D Flughafen Term' ],
 	[ 'KDF A', 'D Flughf W 884' ],
-	[ 'KDH D', 'Hafen' ],
+	[ 'KDH',   'D Hafen' ],
 	[ 'KDU K', 'D Karthäuser Weg' ],
 	[ 'KDVS',  'D Völklinger Str' ],
-	[ 'KDV D', 'Volksgarten' ],
-	[ 'KDW D', 'Wehrhahn' ],
+	[ 'KDV',   'D Volksgarten' ],
+	[ 'KDW',   'D Wehrhahn' ],
 	[ 'FDAL',  'Da Lichtwiese' ],
 	[ 'EDAD',  'Daaden' ],
 	[ 'FDA',   'Da-Arheilgen' ],
@@ -4758,6 +4759,7 @@ my @stations = (
 	[ 'SGB',   'Göttelborn' ],
 	[ 'DGOE',  'Göttengrün-Gef' ],
 	[ 'RGH',   'Gottenheim' ],
+	[ 'RGHG',  'DB/SWEG' ],
 	[ 'NGZ',   'Gotteszell' ],
 	[ 'HG',    'Göttingen' ],
 	[ 'HG G',  'Göttingen Gbf' ],
@@ -6431,7 +6433,7 @@ my @stations = (
 	[ 'XRJU',  'Jurdani' ],
 	[ 'XFJU',  'Juvisy' ],
 	[ 'KKBP',  'K Barbarossapl' ],
-	[ 'KBP K', 'Businesspark' ],
+	[ 'KBP',   'K Businesspark' ],
 	[ 'KKE N', 'K Eifelt Bez II' ],
 	[ 'KKE M', 'K Eifelt Bez III' ],
 	[ 'KKE S', 'K Eifelt Bez IV' ],
@@ -6439,7 +6441,7 @@ my @stations = (
 	[ 'KKE F', 'K Eifeltor Emf' ],
 	[ 'KKE B', 'K Eifeltor Enf' ],
 	[ 'KKE K', 'K Eifeltor Esf' ],
-	[ 'KKP K', 'Geldernstr/Pa' ],
+	[ 'KKP',   'K Geldernstr/Pa' ],
 	[ 'KKHRW', 'K Hansar Wendean' ],
 	[ 'KKLP',  'K Klettenbergp' ],
 	[ 'AKSM',  'K Seefischmarkt' ],
@@ -9434,6 +9436,7 @@ my @stations = (
 	[ 'TNST',  'Neuenstadt/Koch.' ],
 	[ 'TNN',   'Neuenstein' ],
 	[ 'KNEW',  'Neuer Weg' ],
+	[ 'KQNE',  'NRW/RP' ],
 	[ 'MNF',   'Neufahrn b Frei' ],
 	[ 'MNFR',  'Neufahrn/Nbay' ],
 	[ 'XBNC',  'Neufchateau' ],
@@ -14172,8 +14175,8 @@ my @stations = (
 	[ 'XCVY',  'Vyrica' ],
 	[ 'XTVP',  'Vysoka Pec' ],
 	[ 'HWRG',  'W Böhme DB-Gr' ],
-	[ 'KWR W', 'Rauenthal' ],
-	[ 'KWZ W', 'Zool Garten' ],
+	[ 'KWR',   'W Rauenthal' ],
+	[ 'KWZ',   'W Zool Garten' ],
 	[ 'EWFR',  'Wa Unser Fritz' ],
 	[ 'FWAB',  'Wabern (Bz Ksl)' ],
 	[ 'HWAD',  'Wachendorf' ],
@@ -14719,6 +14722,7 @@ my @stations = (
 	[ 'SWIN',  'Wincheringen' ],
 	[ 'EWIL',  'Windelsbleiche' ],
 	[ 'RWND',  'Winden (Pfalz)' ],
+	[ 'FQWH',  'NRW/RP' ],
 	[ 'HWDH',  'Windheim (Weser)' ],
 	[ 'NWB',   'Windischeschenb' ],
 	[ 'XAWIG', 'Windischgarsten' ],
@@ -14894,6 +14898,7 @@ my @stations = (
 	[ 'UWFN',  'Wünschendorf N' ],
 	[ 'BWUE',  'Wünsdorf-Waldst' ],
 	[ 'NWR A', 'Wür Rbf Ausfahrt' ],
+	[ 'HQWS',  'NRW/HE' ],
 	[ 'EWGD',  'Würgendorf' ],
 	[ 'EWGT',  'Würgendorf Ort' ],
 	[ 'NWHO',  'Wür-Heidingsf O' ],
