@@ -2,6 +2,9 @@ git HEAD
 
     * IRIS->new: Fix default lwp_options value (was documented, but not used)
     * Result->route_interesting: Also consider airports
+    * Stations: Update DS100 code list. Fixes 9 stations in Köln, Düsseldorf
+      and Wuppertal which had a wrong code/name combination assigned due to
+      a parser error
 
 Travel::Status::DE::IRIS 1.00 - Fri May 01 2015
 
